# prem-rust-sdk

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: on-pull-request.yaml  on-tag.yaml  on-tag.yml
docs/: ChatCompletionInput.md  ChatCompletionResponse.md  DefaultApi.md  EmbeddingObject.md  EmbeddingUsage.md  EmbeddingsInput.md  EmbeddingsResponse.md  HealthResponse.md  Stop.md
specs/: chat.json
src/apis/: configuration.rs  default_api.rs
src/models/: chat_completion_input.rs  chat_completion_response.rs  health_response.rs  http_validation_error.rs  location_inner.rs  mod.rs  stop.rs  validation_error.rs
tests/: test_chat.rs
