[package]
name = "prem"
authors = ["Filippo Pedrazzini <filippo@premai.io>"]
version = "0.1.0"
edition = "2021"
description = "Prem Rust SDK for interacting with Prem Ecosystem."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]